src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__function_with_params.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 6,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 7,
                                        end: 8,
                                        start_line: 1,
                                        start_col: 8,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 7,
                                end: 8,
                                start_line: 1,
                                start_col: 8,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 10,
                                                    end: 13,
                                                    start_line: 1,
                                                    start_col: 11,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 10,
                                        end: 13,
                                        start_line: 1,
                                        start_col: 11,
                                    },
                                },
                            ),
                            span: Span {
                                start: 10,
                                end: 13,
                                start_line: 1,
                                start_col: 11,
                            },
                        },
                        span: Span {
                            start: 7,
                            end: 13,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 4,
                                    },
                                    span: Span {
                                        start: 15,
                                        end: 16,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 15,
                                end: 16,
                                start_line: 1,
                                start_col: 16,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 18,
                                        end: 21,
                                        start_line: 1,
                                        start_col: 19,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 21,
                                start_line: 1,
                                start_col: 19,
                            },
                        },
                        span: Span {
                            start: 15,
                            end: 21,
                            start_line: 1,
                            start_col: 16,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 26,
                                                end: 29,
                                                start_line: 1,
                                                start_col: 27,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 26,
                                    end: 29,
                                    start_line: 1,
                                    start_col: 27,
                                },
                            },
                        ),
                        span: Span {
                            start: 26,
                            end: 29,
                            start_line: 1,
                            start_col: 27,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Add,
                                    left: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 32,
                                                                end: 33,
                                                                start_line: 1,
                                                                start_col: 33,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 32,
                                                    end: 33,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 32,
                                            end: 33,
                                            start_line: 1,
                                            start_col: 33,
                                        },
                                    },
                                    right: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 36,
                                                                end: 37,
                                                                start_line: 1,
                                                                start_col: 37,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 36,
                                                    end: 37,
                                                    start_line: 1,
                                                    start_col: 37,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 36,
                                            end: 37,
                                            start_line: 1,
                                            start_col: 37,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 32,
                                    end: 37,
                                    start_line: 1,
                                    start_col: 33,
                                },
                            },
                        ),
                        span: Span {
                            start: 30,
                            end: 39,
                            start_line: 1,
                            start_col: 31,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 39,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 39,
        start_line: 1,
        start_col: 1,
    },
}
